--- a/composer.json
+++ b/composer.json
@@ -5,12 +5,17 @@
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "friendsofsymfony/user-bundle": "~2.0",
+        "lexik/jwt-authentication-bundle": "^2.6",
         "symfony/console": "4.3.*",
         "symfony/dotenv": "4.3.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "4.3.*",
         "symfony/http-client": "4.3.*",
         "symfony/orm-pack": "^1.0",
+        "symfony/serializer": "4.3.*",
+        "symfony/swiftmailer-bundle": "^3.2",
+        "symfony/translation": "4.3.*",
         "symfony/twig-bundle": "4.3.*",
         "symfony/yaml": "4.3.*"
     },
