--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
     "require-dev": {
         "symfony/maker-bundle": "^1.12",
         "symfony/profiler-pack": "^1.0",
+        "symfony/test-pack": "^1.0",
         "symfony/var-dumper": "4.3.*"
     },
     "config": {
